BE 認証の記述を修正
